# ScamGuard-AI

./: .env2  README.md  how_to_run.md  pyproject.toml  requirements.txt
app/: app_1.py  main.py
app/model/: SpamDetectionOutput.py
app/prompts/: sys_prompt_2.txt  system_prompt.txt
app/schemas/: llm_schema.py  spam_schema.py
app/scoring/: scoring.py
app/services/: llm_service.py  pipeline.py
app/ui/: streamlit_app.py
app/utils/: clean_data.py  files_loader.py  get_input.py
data/: dataset-2.csv
